--- a/_posts/2020-10-24-apples.md
+++ b/_posts/2020-10-24-apples.md
@@ -4,6 +4,7 @@ author: Nick
 date: 2020-10-24 16:30:00 -0000
 ---
 An apple is a sweet, edible fruit produced by an apple tree.
+<!--more-->
 
 Apple trees are cultivated worldwide, and are the most widely grown species in
 the genus Malus. The tree originated in Central Asia, where its wild ancestor,
