--- a/_posts/2020-10-24-bananas.md
+++ b/_posts/2020-10-24-bananas.md
@@ -5,6 +5,7 @@ date: 2020-10-24 16:31:00 -0000
 ---
 A banana is an edible fruit – botanically a berry – produced by several kinds
 of large herbaceous flowering plants in the genus Musa.
+<!--more-->
 
 In some countries, bananas used for cooking may be called "plantains",
 distinguishing them from dessert bananas. The fruit is variable in size, color,
